--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,21 +1,15 @@
 {
-  "name": "Gift List",
-  "short_name": "Gift List",
-  "description": "A modern app to manage and track gifts for your family and friends",
-  "version": "1.0",
-  "manifest_version": 3,
+  "name": "POE2 Tools",
+  "short_name": "POE2 Tools",
+  "description": "Community-driven tools for Path of Exile 2 players. Build planning, DPS calculations, and more.",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#4F46E5",
-  "permissions": [
-    "storage",
-    "unlimitedStorage"
-  ],
+  "background_color": "#000000",
+  "theme_color": "#fbbf24",
   "icons": [
     {
-      "src": "/icon.svg",
-      "sizes": "512x512",
+      "src": "/favicon.svg",
+      "sizes": "32x32",
       "type": "image/svg+xml",
       "purpose": "any maskable"
     }
