--- a/package.json
+++ b/package.json
@@ -25,12 +25,17 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.17",
+    "i": "^0.3.7",
+    "isomorphic-dompurify": "^2.19.0",
     "lucide-react": "^0.460.0",
+    "lz-string": "^1.5.0",
     "next": "15.0.3",
     "next-themes": "^0.4.4",
+    "npm": "^10.9.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.2",
+    "react-zoom-pan-pinch": "^3.6.1",
     "tailwind-merge": "^2.5.4",
     "zod": "^3.23.8"
   },
