--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "framer-motion": "^11.11.17",
     "i": "^0.3.7",
     "isomorphic-dompurify": "^2.19.0",
+    "lodash.debounce": "^4.0.8",
+    "lodash.throttle": "^4.1.1",
     "lucide-react": "^0.460.0",
     "lz-string": "^1.5.0",
     "next": "15.0.3",
@@ -41,6 +43,7 @@
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/lodash": "^4.17.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
