--- a/vercel.json
+++ b/vercel.json
@@ -18,7 +18,7 @@
   ],
   "headers": [
     {
-      "source": "/(.*)",
+      "source": "/((?!_next/static|_next/image|favicon.ico).*)",
       "headers": [
         {
           "key": "X-Content-Type-Options",
@@ -38,16 +38,7 @@
         },
         {
           "key": "Cache-Control",
-          "value": "public, max-age=3600, stale-while-revalidate=86400"
-        }
-      ]
-    },
-    {
-      "source": "/static/(.*)",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
+          "value": "public, max-age=0, must-revalidate"
         }
       ]
     },
@@ -61,7 +52,7 @@
       ]
     },
     {
-      "source": "/_next/image(.*)",
+      "source": "/static/(.*)",
       "headers": [
         {
           "key": "Cache-Control",
@@ -75,6 +66,24 @@
         {
           "key": "Cache-Control",
           "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    },
+    {
+      "source": "/build-planner/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "no-cache, no-store, must-revalidate"
+        }
+      ]
+    },
+    {
+      "source": "/news/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=60, stale-while-revalidate=30"
         }
       ]
     }
