--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,13 @@
 {
   "redirects": [
     {
-      "source": "http://poe2.dev/:path*",
-      "destination": "https://poe2.dev/:path*",
-      "permanent": true
-    },
-    {
-      "source": "https://www.poe2.dev/:path*",
+      "source": "/:path*",
+      "has": [
+        {
+          "type": "host",
+          "value": "www.poe2.dev"
+        }
+      ],
       "destination": "https://poe2.dev/:path*",
       "permanent": true
     },
