--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.47.5",
+    "@tanstack/react-query": "^5.62.9",
+    "@tanstack/react-query-devtools": "^5.62.9",
     "@uiw/react-md-editor": "^4.0.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "critters": "^0.0.23",
     "framer-motion": "^11.11.17",
     "i": "^0.3.7",
     "isomorphic-dompurify": "^2.19.0",
