--- a/package.json
+++ b/package.json
@@ -38,11 +38,11 @@
     "lodash.throttle": "^4.1.1",
     "lucide-react": "^0.460.0",
     "lz-string": "^1.5.0",
-    "next": "15.0.3",
+    "next": "^15.1.3",
     "next-themes": "^0.4.4",
     "npm": "^10.9.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-hook-form": "^7.53.2",
     "react-markdown": "^9.0.1",
     "react-zoom-pan-pinch": "^3.6.1",
@@ -62,7 +62,7 @@
     "@typescript-eslint/eslint-plugin": "^8.15.0",
     "@typescript-eslint/parser": "^8.15.0",
     "eslint": "^8",
-    "eslint-config-next": "15.0.3",
+    "eslint-config-next": "^15.1.3",
     "eslint-plugin-react-hooks": "^5.0.0",
     "postcss": "^8",
     "prettier": "^3.2.5",
