--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^8.15.0",
     "@typescript-eslint/parser": "^8.15.0",
+    "compression-webpack-plugin": "^11.1.0",
     "eslint": "^8",
     "eslint-config-next": "^15.1.3",
     "eslint-plugin-react-hooks": "^5.0.0",
