--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "scrape:notes": "ts-node --project scripts/tsconfig.json src/scripts/scrape-patch-notes.ts",
     "scrape:items": "ts-node --project scripts/tsconfig.json src/scripts/scrape-all-items.ts",
+    "scrape:ladder": "ts-node --project scripts/tsconfig.json src/scripts/scrape-ladder-stats.ts",
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
@@ -16,10 +17,14 @@
   "dependencies": {
     "@hello-pangea/dnd": "^17.0.0",
     "@hookform/resolvers": "^3.9.1",
+    "@nivo/axes": "^0.88.0",
     "@nivo/bar": "^0.88.0",
+    "@nivo/colors": "^0.88.0",
     "@nivo/core": "^0.88.0",
     "@nivo/line": "^0.88.0",
     "@nivo/pie": "^0.88.0",
+    "@nivo/tooltip": "^0.88.0",
+    "@react-spring/web": "^9.7.5",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
@@ -43,8 +48,8 @@
     "next": "^15.1.3",
     "next-themes": "^0.4.4",
     "npm": "^10.9.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-markdown": "^9.0.1",
     "react-zoom-pan-pinch": "^3.6.1",
