feat: patch note bump, ladder stats and script update

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "scrape": "npm run scrape:notes && npm run scrape:ladder",
     "scrape:notes": "ts-node --project scripts/tsconfig.json src/scripts/scrape-patch-notes.ts",
     "scrape:items": "ts-node --project scripts/tsconfig.json src/scripts/scrape-all-items.ts",
     "scrape:ladder": "ts-node --project scripts/tsconfig.json src/scripts/scrape-ladder-stats.ts",
